New message for recording data in controllers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ add_message_files(
     VehicleState.msg
     AssumedState.msg
     ControllerRun.msg
+    Recording.msg
 )
 
 ## Generate services in the 'srv' folder
